--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search command</string>
-    <string name="placeholder_content">Lorem Ipsum</string>
+    <string name="placeholder_content">Loading ...</string>
     <string name="command_content_label">Command Content Label</string>
 
 </resources>
